# Enterprise-Finance-Tracker

./: .amlignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PERSONAL_FINANCE_TRACKER_SKILL.md  ReadMe.md  docker-compose.yml  pyproject.toml  requirements-prod.txt  requirements.txt
.claude/: settings.local.json
.github/scripts/: download_models.py
.github/workflows/: ci-cd.yml
monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml
notebooks/: colab_bert_training.ipynb
scripts/: init-db.sql  tripletex_demo.py
src/accounting/: quickbooks.py  tripletex.py  visma.py  xero.py
src/api/: dependencies.py  main.py
src/auth/: dependencies.py  jwt.py  password.py
src/consumers/: __init__.py  account_projection_consumer.py  approval_consumer.py  budget_projection_consumer.py  data_lake_consumer.py  dlq_processor.py  email_consumer.py  erp_sync_consumer.py  expense_projection_consumer.py
src/domain/: .gitignore  __init__.py  events_store.py  expense_events.py
src/erp/: __init__.py  dynamics.py  sap.py
src/infrastructure/: __init__.py  cache.py  circuit_breaker.py  data_lake_client.py  kafka_consumer.py  outbox_relay.py  sharding.py
src/integrations/: base.py  models.py
src/ml/: __init__.py  categorizer.py
src/services/: approval_rules.py  approval_service.py  credentials.py  sync_service.py
tests/: conftest.py
tests/e2e/: conftest.py  test_account_api.py  test_approval_rules_api.py  test_budget_api.py  test_data_pipeline.py  test_expense_api.py  test_expense_detail_api.py  test_transaction_flow.py
(+64 files in other folders)
