[project]
name = "finance-tracker"
version = "0.1.0"
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
pythonpath = ["."]
markers = [
    "sandbox: marks tests that hit real external APIs (deselect with -m 'not sandbox')",
]